# qt-openal-demo

./: .gitmodules
src/: audioengine.qml
src/content/: MyAudioEngine.qml  SoundSourceList.qml  TestSound.qml
test-openal-wrapper/: CMakeLists.txt  SoundObj.hpp  main.cpp
